<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_weight="5"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.8"
        android:gravity="center">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_below="@+id/input_username" />

        <Button
            android:id="@+id/btn_login1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/login1"
            android:layout_below="@+id/input_password"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/btn_register1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@+id/btn_login1"
            android:textColor="@color/colorPrimary"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

    </RelativeLayout>

</LinearLayout>