<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/enterInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/enter_info_text"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:id="@+id/nameAndSurnameLin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/enterInfo"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/userNameIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/user_icon"
                    android:layout_marginRight="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/border2">

                    <EditText
                        android:id="@+id/inputUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/Name"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:inputType="textPersonName"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:background="@drawable/no_border"/>

                    <EditText
                        android:id="@+id/inputUserSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/Surname"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:inputType="textPersonName"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:background="@drawable/no_border"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/nameAndSurnameLin"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/userEmailIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/email_icon"
                    android:layout_marginRight="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/border2">
                    <EditText
                        android:id="@+id/inputUserEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/email"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:inputType="textEmailAddress"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@_-."
                        android:background="@drawable/no_border"/>
                    <EditText
                        android:id="@+id/inputUserEmail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/email2"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:inputType="textEmailAddress"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@_-."
                        android:background="@drawable/no_border"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/userNameLin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/emailLin"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/userNameIcon3"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/user_icon"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/inputUserUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:background="@drawable/border2"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/passwordLin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/userNameLin"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/userPasswordIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/password_icon"
                    android:layout_marginRight="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/border2">
                    <EditText
                        android:id="@+id/inputUserPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:inputType="textPassword"
                        android:background="@drawable/no_border"/>
                    <EditText
                        android:id="@+id/inputUserPassword2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password2"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:inputType="textPassword"
                        android:background="@drawable/no_border"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/genderLin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/passwordLin"
                android:gravity="center"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/userGenderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/gender"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp" />

                <LinearLayout
                    android:id="@+id/genderLinInter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/border2">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <RadioButton
                            android:id="@+id/radioF"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:fontFamily="sans-serif"
                            android:text="@string/gender_f"
                            android:gravity="left|center"
                            android:checked="true"
                            android:layout_marginRight="20dp"/>

                        <RadioButton
                            android:id="@+id/radioM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:fontFamily="sans-serif"
                            android:text="@string/gender_m"
                            android:gravity="left|center"
                            android:checked="false"/>

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/saveUserInfoBtn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genderLin"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:text="@string/save"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/saveUserInfoBtn1"/>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>