<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:background="@color/colorPrimary">
                    <ImageView
                        android:id="@+id/imgLogout"
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:layout_gravity="right"
                        android:src="@drawable/logout2_icon_white_large"
                        android:layout_alignParentRight="true"/>
                    <android.support.design.widget.CoordinatorLayout
                        android:id="@+id/coordLay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" >
                        <ImageView
                            android:id="@+id/circleImageViewUser"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/user_icon_white_96"/>
                    </android.support.design.widget.CoordinatorLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/coordLay"
                        android:layout_toLeftOf="@+id/imgLogout"
                        android:layout_below="@+id/imgLogout"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp">

                        <TextView
                            android:id="@+id/userNameText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="#FFFFFF" />
                        <View
                            android:id="@+id/breakView"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="#FFFFFF"
                            android:layout_below="@+id/userNameText"/>

                        <TextView
                            android:id="@+id/userEmailText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/breakView"
                            android:text="email@email.com"
                            android:textAllCaps="false"
                            android:textColor="#FFFFFF" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layoutInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header"
                    android:layout_margin="15dp">
                    <TextView
                        android:id="@+id/vnesiPodatociTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_info"
                        android:layout_marginBottom="10dp"/>

                    <LinearLayout
                        android:id="@+id/userNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border2"
                        android:orientation="horizontal"
                        android:gravity="start|center_vertical"
                        android:layout_below="@+id/vnesiPodatociTxt"
                        android:layout_marginBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">
                        <ImageView
                            android:id="@+id/userNameIcon"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/user_icon"
                            android:layout_marginRight="10dp" />
                        <TextView
                            android:id="@+id/userUsernameText"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@string/name_surname"
                            android:gravity="center_vertical"
                            android:fontFamily="sans-serif"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/userEmailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border2"
                        android:orientation="horizontal"
                        android:gravity="start|center_vertical"
                        android:layout_below="@+id/userNameLayout"
                        android:layout_marginBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">
                        <ImageView
                            android:id="@+id/userEmailIcon"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/email_icon"
                            android:layout_marginRight="10dp" />
                        <TextView
                            android:id="@+id/userEmailText2"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@string/email"
                            android:gravity="center_vertical"
                            android:fontFamily="sans-serif"
                            android:textSize="16sp"/>
                    </LinearLayout>

                <Button
                    android:id="@+id/myRecipesBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@color/colorPrimary"
                    android:textColor="#FFFFFF"
                    android:layout_below="@+id/userEmailLayout"
                    android:text="@string/my_recipes"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>



